--- a/Confeitaria/Home/index.html
+++ b/Confeitaria/Home/index.html
@@ -1,52 +1,49 @@
-<!doctype html>
-<html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Confeitaria</title>
-        <link rel="stylesheet" type="text/css" href="./style.css" media="screen" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary w-100" id="navbarCss">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav" id="navbarHover">
-                    <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Produtos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre nós</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contato</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link">Avaliações</a>
-                    </li>
-                    </ul>
-                </div>
-            </div>
+<html lang="pt-br"><head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Confeitaria</title>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="./style.css" media="screen">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+<body>
+    <header class="header">
+        <div class="logoContent">
+            <a href="#" class="logo"><img src="IMG/logo.png" alt=""></a>    
+            <h1 class="logoName">Bolletos</h1>
+        </div>
+
+        <nav class="navbar">
+            <a href="#home">home</a>
+            <a href="#product">product</a>
+            <a href="#blogs">blogs</a>
+            <a href="#review">review</a>
+            <a href="#contact">contact</a>
         </nav>
-        <div class="container-md vh-100 vw-100 m-0 d-flex align-items-center box" id="box">
-            <div class="container" id="textBox1">
-                <h1>CONFIRA NOSSOS DELICIOSOS BOLOS!</h1>
-                <h2>Os melhores bolos de Guaianases!</h2>
-            </div>
+
+        <div class="icon">
+            <i class="fas fa-search" id="search"></i>
+            <i class="fas fa-bars" id="menu-bar"></i>
         </div>
-        <div class="container-md vh-100 vw-100 m-0 d-flex align-items-center" id="box" style="background-image: url(../IMG/b39f8759e78e8bcebef4080156de36eb_bolo-floresta-negra-receitas-nestle\ \(2\).jpg);">
-            <div class="container" id="textBox1">
-                <h1>CONFIRA NOSSOS DELICIOSOS BOLOS!</h1>
-                <h2>Os melhores bolos de Guaianases!</h2>
-            </div>
+
+        <div class="search">
+            <input type="search" placeholder="search...">
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    </body>
-</html>
+    </header>
+
+    <div class="container-fluid d-flex align-items-center box" id="box">
+        <div class="container" id="textBox1">
+            <h1>CONFIRA NOSSOS DELICIOSOS BOLOS!</h1>
+            <h2>Os melhores bolos de Guaianases!</h2>
+        </div>
+    </div>
+    <div class="container-fluid d-flex align-items-center" id="box" style="background-image: url(IMG/b39f8759e78e8bcebef4080156de36eb_bolo-floresta-negra-receitas-nestle\ \(2\).jpg);">
+        <div class="container" id="textBox1">
+            <h1>CONFIRA NOSSOS DELICIOSOS BOLOS!</h1>
+            <h2>Os melhores bolos de Guaianases!</h2>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
+</body></html>
