--- a/Confeitaria/Home/index.html
+++ b/Confeitaria/Home/index.html
@@ -44,6 +44,45 @@
             <h2>Os melhores bolos de Guaianases!</h2>
         </div>
     </div>
+    <footer class="footer d-flex flex-row vw-100 bg-light">
+        <div class="row w-100">
+            <div class="boxFooter col-md-3 p-5">
+                <div class="d-flex flex-row align-items-center mb-4">
+                    <img src="IMG/logo.png" alt="">
+                    <h1 class="logoName">Bolletos</h1>
+                </div>
+                <p class="footerText">Conceito zica bizarro olha só que legal esse texto maligno com palavras que nao conheço como isso é possivel??</p>
+                <div class="social-container">
+                    <div class="social "><i class="fab fa-facebook-f"></i></div>
+                    <div class="social "><i class="fab fa-twitter"></i></div>
+                    <div class="social "><i class="fab fa-google-plus-g"></i></div>
+                    <div class="social "><i class="fab fa-whatsapp"></i></div>
+                </div>
+            </div>
+            <div class="boxFooter col-md-3 p-5" id="endereco">
+                <h2 class="mb-5 fw-bold">Endereço</h2>
+                <div>
+                    <span><ion-icon name="location-outline"></ion-icon></span><span class="adressInfo ms-2 fs-5">R. Feliciano de Mendonça, 290 - São Paulo - SP</span>
+                </div>
+                <div>
+                    <span><ion-icon name="mail-sharp"></ion-icon></span><span class="adressInfo ms-2 fs-5">EmailEmpresa@gmail.com</span>
+                </div>
+                <div class="pb-3">
+                    <span><ion-icon name="call-outline"></ion-icon></span><span class="adressInfo ms-2 fs-5">+55 (11) 9xxxx-xxxx</span>
+                </div>
+            </div>
+            <div class="boxFooter col-md-3 p-5">
+                BOA TARDE
+            </div>
+            <div class="boxFooter col-md-3 p-5">
+                BOA TARDE
+            </div>    
+        </div>
+        
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body></html>
