--- a/Confeitaria/ClienteArea/index.html
+++ b/Confeitaria/ClienteArea/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="logoContent">
             <a href="#" class="logo"><img src="IMG/logo.png" alt=""></a>    
-            <h1 class="logoName">Bolletos</h1>
+            <h1 class="logoName" style="color: #e1e1e1;">Bolletos</h1>
         </div>
 
         <nav class="navbar">
@@ -22,9 +22,10 @@
             <a href="#contact">contato</a>
         </nav>
 
-        <div class="icon">
-            <i class="fas fa-search" id="search"></i>
-            <i class="fas fa-bars" id="menu-bar"></i>
+        <div class="icon d-flex align-items-center justify-content-center">
+            <a href="login.html"><button type="button" class="btn btn-outline-light fw-bold"  style="height: 30px;">Login</button></a>
+            <button type="button" class="btn btn-light ms-2 fw-bold" style="height: 30px;">Cadastrar</button>
+            <i class="fas fa-bars ms-5" id="menu-bar"></i>
         </div>
 
         <div class="search">
@@ -79,7 +80,7 @@
                         <li class=" mb-1"><a href="sobre.html">Sobre Nós</a></li>
                         <li class=" mb-1"><a href="">Avalições</a></li>
                         <li class=" mb-1"><a href="contato.html">Contato</a></li>
-                        <li class=" mb-1"><a href="">Admin</a></li>
+                        <li class=" mb-1"><a href="../area-admin/home/index.php">Admin</a></li>
                     </ul>
             </div>
             <div class="boxFooter col-md-3 p-5">
