--- a/Confeitaria/ClienteArea/index.html
+++ b/Confeitaria/ClienteArea/index.html
@@ -15,9 +15,9 @@
         </div>
 
         <nav class="navbar">
-            <a href="#home">home</a>
-            <a href="#product">produtos</a>
-            <a href="#blogs">sobre nós</a>
+            <a href="#">home</a>
+            <a href="produtos.html">produtos</a>
+            <a href="sobre.html">sobre nós</a>
             <a href="#review">avaliações</a>
             <a href="#contact">contato</a>
         </nav>
@@ -46,13 +46,13 @@
         </div>
     </div>
     <footer>
-        <div class=" row w-100 ms-0" style="height: 270px;">
+        <div class=" row w-100 ms-0 justify-content-center" style="height: 270px;">
             <div class="boxFooter col-md-3 p-5">
                 <div class="d-flex flex-row align-items-center mb-4">
                     <img src="IMG/logo.png" alt="">
                     <h1 class="logoName">Bolletos</h1>
                 </div>
-                <p class="footerText">Conceito zica bizarro olha só que legal esse texto maligno com palavras que nao conheço como isso é possivel??</p>
+                <p class="footerText">Seja bem-vindos a Bolletos, nós servimos qualidade e delicias aos nossos clientes desde 1973. Entregas para toda São Paulo - Capital.</p>
                 <div class="social-container">
                     <div class="social "><i class="fab fa-facebook-f"></i></div>
                     <div class="social "><i class="fab fa-twitter"></i></div>
@@ -66,10 +66,10 @@
                     <span><ion-icon name="location-outline"></ion-icon></span><span class="adressInfo ms-2 fs-5">R. Feliciano de Mendonça, 290 - São Paulo - SP</span>
                 </div>
                 <div>
-                    <span><ion-icon name="mail-sharp"></ion-icon></span><span class="adressInfo ms-2 fs-5">EmailEmpresa@gmail.com</span>
+                    <span><ion-icon name="mail-sharp"></ion-icon></span><span class="adressInfo ms-2 fs-5">BolletosBolo@gmail.com</span>
                 </div>
                 <div class="pb-3">
-                    <span><ion-icon name="call-outline"></ion-icon></span><span class="adressInfo ms-2 fs-5">+55 (11) 9xxxx-xxxx</span>
+                    <span><ion-icon name="call-outline"></ion-icon></span><span class="adressInfo ms-2 fs-5">+55 (11) 94739-3692</span>
                 </div>
             </div>
             <div class="boxFooter col-md-3 p-5">
@@ -82,10 +82,7 @@
                         <li class=" mb-1"><a href="contato.html">Contato</a></li>
                         <li class=" mb-1"><a href="../area-admin/home/index.php">Admin</a></li>
                     </ul>
-            </div>
-            <div class="boxFooter col-md-3 p-5">
-                BOA TARDE
-            </div>    
+            </div>  
         </div>
         
     </footer>
