--- a/Confeitaria/ClienteArea/sobre.html
+++ b/Confeitaria/ClienteArea/sobre.html
@@ -39,7 +39,7 @@
         <div class="container-fluid bg-light w-50 rounded" id="boxSobre" style="height: 600px;">
             <h1 class="text-center mt-4 fw-bold">Sobre Nós</h1>
             <hr>
-            <p class="p-4"></p>
+            <p class="p-4">oii quer.... um bollo? bolleto!</p>
         </div>
     </div>
 
@@ -76,7 +76,6 @@
                         <li class=" mb-1"><a href="">Home</a></li>
                         <li class=" mb-1"><a href="produtos.html">Produtos</a></li>
                         <li class=" mb-1"><a href="sobre.html">Sobre Nós</a></li>
-                        <li class=" mb-1"><a href="">Avalições</a></li>
                         <li class=" mb-1"><a href="contato.html">Contato</a></li>
                         <li class=" mb-1"><a href="../area-admin/home/index.php">Admin</a></li>
                     </ul>
